RESOLVED FIXED70611
Web Inspector: Advanced search is working very slowly and does not show searching progress.
https://bugs.webkit.org/show_bug.cgi?id=70611
Summary Web Inspector: Advanced search is working very slowly and does not show searc...
Vsevolod Vlasov
Reported 2011-10-21 08:25:54 PDT
Advanced search is working very slowly and does not show searching progress.
Attachments
Patch (40.81 KB, patch)
2011-10-21 08:45 PDT, Vsevolod Vlasov
no flags
Patch (41.17 KB, patch)
2011-10-21 08:50 PDT, Vsevolod Vlasov
pfeldman: review+
Vsevolod Vlasov
Comment 1 2011-10-21 08:45:27 PDT
Vsevolod Vlasov
Comment 2 2011-10-21 08:50:40 PDT
Vsevolod Vlasov
Comment 3 2011-10-21 09:58:16 PDT
Note You need to log in before you can comment on or make changes to this bug.